--- a/src/components/Counter.module.scss
+++ b/src/components/Counter.module.scss
@@ -1,4 +1,10 @@
 .counter {
   font-family: sans-serif;
   text-align: center;
+  padding: 10px;
+
+  button {
+    padding: 10px;
+    margin: 10px;
+  }
 }
